--- a/notebooks/model_for_q1.ipynb
+++ b/notebooks/model_for_q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -13,6 +13,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Loading required package: Matrix\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘Matrix’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:tidyr’:\n",
+      "\n",
+      "    expand, pack, unpack\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘nlme’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:lme4’:\n",
+      "\n",
+      "    lmList\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    collapse\n",
+      "\n",
+      "\n",
       "here() starts at /home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats\n",
       "\n"
      ]
@@ -31,39 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "'/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks'"
-      ],
-      "text/latex": [
-       "'/home/ecamo19/Documents/projects/nutrients\\_and\\_water\\_effects\\_2022/shade\\_house\\_reproduceble\\_stats/notebooks'"
-      ],
-      "text/markdown": [
-       "'/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks'"
-      ],
-      "text/plain": [
-       "[1] \"/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "getwd()"
+    "setwd(here::here())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -74,47 +86,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "File .here already exists in /home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats\n",
+      "\n",
+      "Attaching package: ‘lubridate’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    date, intersect, setdiff, union\n",
+      "\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in is.data.frame(y): object 'data_leaftraits_cleaned' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in is.data.frame(y): object 'data_leaftraits_cleaned' not found\nTraceback:\n",
+      "1. source(\"./scripts/code_join_data_full_dataset.R\")",
+      "2. withVisible(eval(ei, envir))",
+      "3. eval(ei, envir)",
+      "4. eval(ei, envir)",
+      "5. data_biomass_cleaned %>% inner_join(data_ecophys_cleaned, by = c(\"id\", \n .     \"spcode\", \"treatment\")) %>% inner_join(data_leaftraits_cleaned, \n .     by = c(\"id\", \"spcode\", \"treatment\")) %>% inner_join(data_isotopes_cleaned, \n .     by = c(\"id\", \"spcode\", \"treatment\")) %>% inner_join(data_initheight_cleaned, \n .     by = c(\"id\", \"spcode\", \"treatment\")) %>% inner_join(data_rgr_agr_cleaned, \n .     by = c(\"id\", \"spcode\", \"treatment\")) %>% clean_names()",
+      "6. clean_names(.)",
+      "7. inner_join(., data_rgr_agr_cleaned, by = c(\"id\", \"spcode\", \"treatment\"))",
+      "8. inner_join(., data_initheight_cleaned, by = c(\"id\", \"spcode\", \n .     \"treatment\"))",
+      "9. inner_join(., data_isotopes_cleaned, by = c(\"id\", \"spcode\", \"treatment\"))",
+      "10. inner_join(., data_leaftraits_cleaned, by = c(\"id\", \"spcode\", \n  .     \"treatment\"))",
+      "11. inner_join.data.frame(., data_leaftraits_cleaned, by = c(\"id\", \n  .     \"spcode\", \"treatment\"))",
+      "12. auto_copy(x, y, copy = copy)",
+      "13. same_src(x, y)",
+      "14. same_src.data.frame(x, y)",
+      "15. is.data.frame(y)"
      ]
     }
    ],
    "source": [
-    "set_here('../')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "'/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks'"
-      ],
-      "text/latex": [
-       "'/home/ecamo19/Documents/projects/nutrients\\_and\\_water\\_effects\\_2022/shade\\_house\\_reproduceble\\_stats/notebooks'"
-      ],
-      "text/markdown": [
-       "'/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks'"
-      ],
-      "text/plain": [
-       "[1] \"/home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproduceble_stats/notebooks\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "# Load all joined dataset\n",
-    "getwd()\n",
-    "#source(\"../scripts/code_join_data_full_dataset.R\")"
+    "source(\"./scripts/code_join_data_full_dataset.R\")"
    ]
   },
   {
