--- a/notebooks/model_for_q1.ipynb
+++ b/notebooks/model_for_q1.ipynb
@@ -75,28 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘lubridate’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    date, intersect, setdiff, union\n",
-      "\n",
-      "\n"
-     ]
-    },
     {
      "ename": "ERROR",
      "evalue": "Error in is.data.frame(y): object 'data_leaftraits_cleaned' not found\n",
@@ -127,29 +112,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/latex": [],
-      "text/markdown": [],
-      "text/plain": [
-       "character(0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "ls()"
+    "# __Q1: What is the relative influence of water and/or nutrient availability on tropical dry forest seedling growth and biomass allocation__"
    ]
   },
   {
