--- a/notebooks/model_for_q1.ipynb
+++ b/notebooks/model_for_q1.ipynb
@@ -545,7 +545,8 @@
     "models_q1 %>%\n",
     "\n",
     "    map(., r2) %>%\n",
-    "    unlist()"
+    "    unlist() %>%\n",
+    "    kable()"
    ]
   },
   {
@@ -1712,7 +1713,7 @@
     "                stringr::str_replace(., c(string), \"pred_\") %>%\n",
     "\n",
     "                # Remove dollar sing\n",
-    "                gsub(\"\\\\$\", \"\", .))) %>%\n",
+    "                gsub(\"\\\\*_\", \"\", .))) %>%\n",
     "\n",
     "\n",
     "        # Back transform log variables\n",
