--- a/notebooks/model_for_q1.ipynb
+++ b/notebooks/model_for_q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -28,7 +28,13 @@
       "\n",
       "\n",
       "Loading required package: Matrix\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Attaching package: ‘nlme’\n",
       "\n",
@@ -975,7 +981,8 @@
     "        pairwise ~ treatment*nfixer,\n",
     "        adjust = \"tukey\"\n",
     "        )$contrast) %>%\n",
-    "        mutate(across(2:6, round, 6))"
+    "        mutate(across(2:6, round, 6)) %>%\n",
+    "        kable()"
    ]
   },
   {
@@ -1177,7 +1184,8 @@
     "        pairwise ~ treatment*nfixer,\n",
     "        adjust = \"tukey\"\n",
     "        )$contrast) %>%\n",
-    "        mutate(across(2:6, round, 6))"
+    "        mutate(across(2:6, round, 6)) %>%\n",
+    "        kable()"
    ]
   },
   {
@@ -1379,7 +1387,8 @@
     "        pairwise ~ treatment*nfixer,\n",
     "        adjust = \"tukey\"\n",
     "        )$contrast) %>%\n",
-    "        mutate(across(2:6, round, 6))"
+    "        mutate(across(2:6, round, 6)) %>%\n",
+    "        kable()"
    ]
   },
   {
@@ -1664,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1672,18 +1681,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“\u001b[1m\u001b[22m`funs()` was deprecated in dplyr 0.8.0.\n",
-      "\u001b[36mℹ\u001b[39m Please use a list of either functions or lambdas:\n",
-      "\n",
-      "# Simple named list: list(mean = mean, median = median)\n",
-      "\n",
-      "# Auto named with `tibble::lst()`: tibble::lst(mean, median)\n",
-      "\n",
-      "# Using lambdas list(~ mean(., trim = .2), ~ median(., na.rm = TRUE))”\n"
+     "ename": "ERROR",
+     "evalue": "Error in modelr::gather_predictions(data_mass_fractions, models_mass_fractions$rmf_log, : could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in modelr::gather_predictions(data_mass_fractions, models_mass_fractions$rmf_log, : could not find function \"%>%\"\nTraceback:\n"
      ]
     }
    ],
