--- a/notebooks/model_for_q3.ipynb
+++ b/notebooks/model_for_q3.ipynb
@@ -101,19 +101,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __Q3:How do functional traits, treatment, and N-fixing status interact to influence seedling-level growth rates and biomass accumulation?__"
+    "# __Q3:How do functional traits, treatment, and N-fixing status interact to influence seedling-level growth rates and biomass accumulation?__\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pcA\n"
+    "## PCA\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -121,93 +121,14 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 × 19</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>spcode</th><th scope=col>treatment</th><th scope=col>nfixer</th><th scope=col>init_height</th><th scope=col>total_biomass</th><th scope=col>agr</th><th scope=col>rgr</th><th scope=col>rgr_slope</th><th scope=col>root_shoot_ratio</th><th scope=col>rmf</th><th scope=col>smf</th><th scope=col>lmf</th><th scope=col>amax</th><th scope=col>gs</th><th scope=col>wue</th><th scope=col>d13c</th><th scope=col>pnue</th><th scope=col>Narea_g_m2</th><th scope=col>sla</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>5</th><td>ec</td><td>no_additions        </td><td>fixer</td><td>17.0</td><td> 3.915</td><td>0.2058824</td><td>0.008326423</td><td>0.1573281</td><td>0.7369122</td><td>42.42656</td><td>23.57599</td><td>33.99745</td><td>23.420</td><td>0.177</td><td>12.682</td><td>-29.52088</td><td>163.02889</td><td>2.012140</td><td>0.02333615</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>ec</td><td>no_additions        </td><td>fixer</td><td>25.0</td><td> 6.284</td><td>0.2352941</td><td>0.006915137</td><td>0.1342702</td><td>0.9094500</td><td>47.62890</td><td>26.14577</td><td>26.22533</td><td>23.543</td><td>0.257</td><td> 7.296</td><td>-29.39493</td><td> 94.78208</td><td>3.479136</td><td>0.01321698</td></tr>\n",
-       "\t<tr><th scope=row>7</th><td>ec</td><td>no_additions        </td><td>fixer</td><td>14.0</td><td> 5.798</td><td>0.2117647</td><td>0.009725630</td><td>0.1815346</td><td>1.2728342</td><td>56.00207</td><td>17.10935</td><td>26.88858</td><td>21.427</td><td>0.210</td><td> 8.928</td><td>-28.95120</td><td> 66.80843</td><td>4.492271</td><td>0.01081831</td></tr>\n",
-       "\t<tr><th scope=row>8</th><td>ec</td><td>no_additions        </td><td>fixer</td><td>16.0</td><td> 3.857</td><td>0.1705882</td><td>0.007589858</td><td>0.1219915</td><td>0.9499494</td><td>48.71662</td><td>21.31190</td><td>29.97148</td><td>23.673</td><td>0.193</td><td>11.492</td><td>-29.91484</td><td>145.71489</td><td>2.275544</td><td>0.02328424</td></tr>\n",
-       "\t<tr><th scope=row>9</th><td>ec</td><td>plus_water_nutrients</td><td>fixer</td><td>20.5</td><td> 4.974</td><td>0.2470588</td><td>0.008297277</td><td>0.1639320</td><td>1.0376895</td><td>50.92481</td><td>26.75915</td><td>22.31604</td><td>19.670</td><td>0.257</td><td> 4.574</td><td>-30.27865</td><td> 78.54372</td><td>3.507751</td><td>0.01122583</td></tr>\n",
-       "\t<tr><th scope=row>10</th><td>ec</td><td>plus_water_nutrients</td><td>fixer</td><td>21.0</td><td>15.055</td><td>0.4235294</td><td>0.011747398</td><td>0.2042577</td><td>1.4173089</td><td>58.63168</td><td>18.79110</td><td>22.57722</td><td>21.950</td><td>0.267</td><td> 5.023</td><td>-29.10113</td><td>145.60331</td><td>2.111539</td><td>0.02207814</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 19\n",
-       "\\begin{tabular}{r|lllllllllllllllllll}\n",
-       "  & spcode & treatment & nfixer & init\\_height & total\\_biomass & agr & rgr & rgr\\_slope & root\\_shoot\\_ratio & rmf & smf & lmf & amax & gs & wue & d13c & pnue & Narea\\_g\\_m2 & sla\\\\\n",
-       "  & <fct> & <fct> & <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t5 & ec & no\\_additions         & fixer & 17.0 &  3.915 & 0.2058824 & 0.008326423 & 0.1573281 & 0.7369122 & 42.42656 & 23.57599 & 33.99745 & 23.420 & 0.177 & 12.682 & -29.52088 & 163.02889 & 2.012140 & 0.02333615\\\\\n",
-       "\t6 & ec & no\\_additions         & fixer & 25.0 &  6.284 & 0.2352941 & 0.006915137 & 0.1342702 & 0.9094500 & 47.62890 & 26.14577 & 26.22533 & 23.543 & 0.257 &  7.296 & -29.39493 &  94.78208 & 3.479136 & 0.01321698\\\\\n",
-       "\t7 & ec & no\\_additions         & fixer & 14.0 &  5.798 & 0.2117647 & 0.009725630 & 0.1815346 & 1.2728342 & 56.00207 & 17.10935 & 26.88858 & 21.427 & 0.210 &  8.928 & -28.95120 &  66.80843 & 4.492271 & 0.01081831\\\\\n",
-       "\t8 & ec & no\\_additions         & fixer & 16.0 &  3.857 & 0.1705882 & 0.007589858 & 0.1219915 & 0.9499494 & 48.71662 & 21.31190 & 29.97148 & 23.673 & 0.193 & 11.492 & -29.91484 & 145.71489 & 2.275544 & 0.02328424\\\\\n",
-       "\t9 & ec & plus\\_water\\_nutrients & fixer & 20.5 &  4.974 & 0.2470588 & 0.008297277 & 0.1639320 & 1.0376895 & 50.92481 & 26.75915 & 22.31604 & 19.670 & 0.257 &  4.574 & -30.27865 &  78.54372 & 3.507751 & 0.01122583\\\\\n",
-       "\t10 & ec & plus\\_water\\_nutrients & fixer & 21.0 & 15.055 & 0.4235294 & 0.011747398 & 0.2042577 & 1.4173089 & 58.63168 & 18.79110 & 22.57722 & 21.950 & 0.267 &  5.023 & -29.10113 & 145.60331 & 2.111539 & 0.02207814\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 19\n",
-       "\n",
-       "| <!--/--> | spcode &lt;fct&gt; | treatment &lt;fct&gt; | nfixer &lt;fct&gt; | init_height &lt;dbl&gt; | total_biomass &lt;dbl&gt; | agr &lt;dbl&gt; | rgr &lt;dbl&gt; | rgr_slope &lt;dbl&gt; | root_shoot_ratio &lt;dbl&gt; | rmf &lt;dbl&gt; | smf &lt;dbl&gt; | lmf &lt;dbl&gt; | amax &lt;dbl&gt; | gs &lt;dbl&gt; | wue &lt;dbl&gt; | d13c &lt;dbl&gt; | pnue &lt;dbl&gt; | Narea_g_m2 &lt;dbl&gt; | sla &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 5 | ec | no_additions         | fixer | 17.0 |  3.915 | 0.2058824 | 0.008326423 | 0.1573281 | 0.7369122 | 42.42656 | 23.57599 | 33.99745 | 23.420 | 0.177 | 12.682 | -29.52088 | 163.02889 | 2.012140 | 0.02333615 |\n",
-       "| 6 | ec | no_additions         | fixer | 25.0 |  6.284 | 0.2352941 | 0.006915137 | 0.1342702 | 0.9094500 | 47.62890 | 26.14577 | 26.22533 | 23.543 | 0.257 |  7.296 | -29.39493 |  94.78208 | 3.479136 | 0.01321698 |\n",
-       "| 7 | ec | no_additions         | fixer | 14.0 |  5.798 | 0.2117647 | 0.009725630 | 0.1815346 | 1.2728342 | 56.00207 | 17.10935 | 26.88858 | 21.427 | 0.210 |  8.928 | -28.95120 |  66.80843 | 4.492271 | 0.01081831 |\n",
-       "| 8 | ec | no_additions         | fixer | 16.0 |  3.857 | 0.1705882 | 0.007589858 | 0.1219915 | 0.9499494 | 48.71662 | 21.31190 | 29.97148 | 23.673 | 0.193 | 11.492 | -29.91484 | 145.71489 | 2.275544 | 0.02328424 |\n",
-       "| 9 | ec | plus_water_nutrients | fixer | 20.5 |  4.974 | 0.2470588 | 0.008297277 | 0.1639320 | 1.0376895 | 50.92481 | 26.75915 | 22.31604 | 19.670 | 0.257 |  4.574 | -30.27865 |  78.54372 | 3.507751 | 0.01122583 |\n",
-       "| 10 | ec | plus_water_nutrients | fixer | 21.0 | 15.055 | 0.4235294 | 0.011747398 | 0.2042577 | 1.4173089 | 58.63168 | 18.79110 | 22.57722 | 21.950 | 0.267 |  5.023 | -29.10113 | 145.60331 | 2.111539 | 0.02207814 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   spcode treatment            nfixer init_height total_biomass agr      \n",
-       "5  ec     no_additions         fixer  17.0         3.915        0.2058824\n",
-       "6  ec     no_additions         fixer  25.0         6.284        0.2352941\n",
-       "7  ec     no_additions         fixer  14.0         5.798        0.2117647\n",
-       "8  ec     no_additions         fixer  16.0         3.857        0.1705882\n",
-       "9  ec     plus_water_nutrients fixer  20.5         4.974        0.2470588\n",
-       "10 ec     plus_water_nutrients fixer  21.0        15.055        0.4235294\n",
-       "   rgr         rgr_slope root_shoot_ratio rmf      smf      lmf      amax  \n",
-       "5  0.008326423 0.1573281 0.7369122        42.42656 23.57599 33.99745 23.420\n",
-       "6  0.006915137 0.1342702 0.9094500        47.62890 26.14577 26.22533 23.543\n",
-       "7  0.009725630 0.1815346 1.2728342        56.00207 17.10935 26.88858 21.427\n",
-       "8  0.007589858 0.1219915 0.9499494        48.71662 21.31190 29.97148 23.673\n",
-       "9  0.008297277 0.1639320 1.0376895        50.92481 26.75915 22.31604 19.670\n",
-       "10 0.011747398 0.2042577 1.4173089        58.63168 18.79110 22.57722 21.950\n",
-       "   gs    wue    d13c      pnue      Narea_g_m2 sla       \n",
-       "5  0.177 12.682 -29.52088 163.02889 2.012140   0.02333615\n",
-       "6  0.257  7.296 -29.39493  94.78208 3.479136   0.01321698\n",
-       "7  0.210  8.928 -28.95120  66.80843 4.492271   0.01081831\n",
-       "8  0.193 11.492 -29.91484 145.71489 2.275544   0.02328424\n",
-       "9  0.257  4.574 -30.27865  78.54372 3.507751   0.01122583\n",
-       "10 0.267  5.023 -29.10113 145.60331 2.111539   0.02207814"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in data_for_models %>% clean_names() %>% dplyr::select(spcode, treatment, : could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in data_for_models %>% clean_names() %>% dplyr::select(spcode, treatment, : could not find function \"%>%\"\nTraceback:\n"
+     ]
     }
    ],
-   "source": [
-    "head(data_for_models)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
    "source": [
     "# Select variables that are going to be used in the model\n",
     "data_for_models <-\n",
