--- a/notebooks/supplementary_figures.ipynb
+++ b/notebooks/supplementary_figures.ipynb
@@ -2,17 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘janitor’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    chisq.test, fisher.test\n",
+      "\n",
+      "\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: Matrix\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "here() starts at /home/ecamo19/Documents/projects/nutrients_and_water_effects_2022/shade_house_reproducible_stats\n",
+      "\n",
+      "Loading required package: reactable\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘reactablefmtr’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:ggplot2’:\n",
+      "\n",
+      "    margin\n",
+      "\n",
+      "\n",
+      "Loading required package: carData\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘car’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    some\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    recode\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘modelr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:performance’:\n",
+      "\n",
+      "    mae, mse, rmse\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(janitor)\n",
     "library(ggpubr)\n",
-    "library(tidyverse)\n",
     "library(knitr)\n",
     "library(ggplot2)\n",
     "library(ggsci)\n",
@@ -22,7 +93,6 @@
     "library(emmeans)\n",
     "library(dplyr)\n",
     "library(purrr)\n",
-    "\n",
     "library(tibble)\n",
     "library(MuMIn)\n",
     "library(here)\n",
@@ -311,8 +381,29 @@
     "\ttheme_bw() +\n",
     "\n",
     "    facet_wrap(~ sm_measured, scales = \"free_y\") +\n",
+    "\t\t#Define colors\n",
+    "\t#scale_colour_manual(values = c(\"#F0E442\",\"#0072B2\"))+\n",
+    "\txlab(\"Date\") + ylab(\"Mean Pot Soil Moisture %\") +\n",
     "\n",
-    "\t#D%>%                                        \"#56B4E9\",\"#0072B2\"))"
+    "\t#Delete lines around facet labels\n",
+    "\ttheme(strip.background = element_rect( color=\"white\", fill=\"white\"),\n",
+    "\n",
+    "     #Font size\n",
+    "     axis.text = element_text(size = 18),\n",
+    "     axis.title = element_text(size = 18,face = \"bold\"),\n",
+    "     strip.text.x = element_text(size = 18,face = \"bold\"),\n",
+    "\n",
+    "     # Legend position and size\n",
+    "     legend.position = \"bottom\",\n",
+    "     legend.title = element_text(size = 18),\n",
+    "     legend.text = element_text(size = 18)) +\n",
+    "\t guides(col = guide_legend(ncol = 1,\n",
+    "\t \t\t\t\t\t\t  title.position = \"left\",\n",
+    "\t \t\t\t\t\t\t  title.hjust = .59,\n",
+    "\t \t\t\t\t\t\t  title = \"Soil Moisture Measuared:\")\n",
+    "\t \t   ) +\n",
+    "    ggplot2::scale_fill_manual(values = c(\"#F0E442\",\"#009E73\",\n",
+    "                                              \"#56B4E9\",\"#0072B2\"))"
    ]
   },
   {
