--- a/notebooks/model_for_q3.ipynb
+++ b/notebooks/model_for_q3.ipynb
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regression model with PCs as independent variables"
+    "## Regression models "
    ]
   },
   {
@@ -464,6 +464,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total biomass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 575,
    "metadata": {
@@ -493,6 +500,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relative Growth Rate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 630,
    "metadata": {
@@ -518,6 +532,13 @@
     "                            init_height,\n",
     "\n",
     "                        data = data_for_regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Root to shoot ratio"
    ]
   },
   {
