--- a/notebooks/model_for_q2.ipynb
+++ b/notebooks/model_for_q2.ipynb
@@ -217,6 +217,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Trait Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data_traits_scaled <-\n",
+    "    data_for_models %>%\n",
+    "        dplyr::select(-c(total_biomass, rgr, root_shoot_ratio, init_height)) %>%\n",
+    "        mutate(across(where(is.numeric), scale))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pca_traits <- princomp(data_traits_scaled[,c(4:ncol(data_traits_scaled))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fviz_screeplot(pca_traits, addlabels = TRUE, ylim = c(0, 50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fviz_pca_biplot(pca_traits,axes = c(1, 2),\n",
+    "\n",
+    "                # Add group\n",
+    "                habillage= data_traits_scaled$nfixer,\n",
+    "\n",
+    "                # Set labels\n",
+    "                label =\"var\",\n",
+    "\n",
+    "                # Set arrow color\n",
+    "                col.var = \"black\",\n",
+    "\n",
+    "                # Repel overlapping labels\n",
+    "                repel = TRUE) +\n",
+    "  theme_minimal() + scale_color_brewer(palette=\"Set1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fviz_pca_biplot(pca_traits,axes = c(1, 3),\n",
+    "\n",
+    "                # Add group\n",
+    "                habillage = data_traits_scaled$nfixer,\n",
+    "\n",
+    "                # Set labels\n",
+    "                label =\"var\",\n",
+    "\n",
+    "                # Set arrow color\n",
+    "                col.var = \"black\",\n",
+    "\n",
+    "                # Repel overlapping labels\n",
+    "                repel = TRUE) +\n",
+    "  theme_minimal() + scale_color_brewer(palette=\"Set1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fviz_pca_biplot(pca_traits,axes = c(2, 3),\n",
+    "\n",
+    "                # Add group\n",
+    "                habillage = data_traits_scaled$nfixer,\n",
+    "\n",
+    "                # Set labels\n",
+    "                label =\"var\",\n",
+    "\n",
+    "                # Set arrow color\n",
+    "                col.var = \"black\",\n",
+    "\n",
+    "                # Repel overlapping labels\n",
+    "                repel = TRUE) +\n",
+    "  theme_minimal() + scale_color_brewer(palette=\"Set1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Extract loadings\n",
+    "pca_traits$loadings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Biplots interpretation\n",
+    "[PCA interpretation](https://wilkelab.org/SDS375/slides/dimension-reduction-1.html#18)\n",
+    "\n",
+    "+ The first 3 PCs explains 81% (47.9,19.4,15.8) of the variability in the data\n",
+    "+ PC1 separates fixers from non-fixers\n",
+    "+ All traits contribute positively to PC1 \n",
+    "\n",
+    "+ PC1 represents the overall high photosynthetic capacity \n",
+    "+ PC2 represents the difference between stomatal conductance and \n",
+    "+ PC3 represents the difference between d13c and "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Models"
    ]
   },
