--- a/notebooks/model_for_q2.ipynb
+++ b/notebooks/model_for_q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -99,7 +99,8 @@
     "library(car)\n",
     "library(ggplot2)\n",
     "library(modelr)\n",
-    "library(knitr)"
+    "library(knitr)\n",
+    "library(factoextra)"
    ]
   },
   {
