--- a/notebooks/model_for_q2.ipynb
+++ b/notebooks/model_for_q2.ipynb
@@ -24,8 +24,7 @@
     "library(car)\n",
     "library(ggplot2)\n",
     "library(modelr)\n",
-    "library(knitr)\n",
-    "library(factoextra)"
+    "library(knitr)"
    ]
   },
   {
