--- a/notebooks/pca_for_q3.ipynb
+++ b/notebooks/pca_for_q3.ipynb
@@ -11,25 +11,17 @@
    "outputs": [],
    "source": [
     "library(dplyr)\n",
-    "library(lme4)\n",
-    "library(nlme)\n",
-    "library(purrr)\n",
     "library(performance)\n",
     "library(tibble)\n",
-    "library(MuMIn)\n",
     "library(here)\n",
     "library(emmeans)\n",
     "library(car)\n",
-    "library(ggplot2)\n",
     "library(modelr)\n",
-    "require(vegan)\n",
-    "require(knitr)\n",
-    "require(ggpubr)\n",
-    "library(ggeffects)\n",
+    "library(vegan)\n",
+    "library(knitr)\n",
+    "library(ggpubr)\n",
     "library(janitor)\n",
-    "library(sjPlot)\n",
-    "library(visreg)\n",
-    "library(interactions)\n"
+    "library(factoextra)\n"
    ]
   },
   {
