--- a/notebooks/pca_for_q3.ipynb
+++ b/notebooks/pca_for_q3.ipynb
@@ -93,7 +93,7 @@
     "library(ggpubr)\n",
     "library(janitor)\n",
     "library(factoextra)\n",
-    "library(dichromat)\n"
+    "library(dichromat)"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __Q3:How do functional traits, treatment, and N-fixing status interact to influence seedling-level growth rates and biomass accumulation?__\n"
+    "# __Q3: Are traits coordinated along the \"fast to slow\" continuum and to what extent does this correlated with N-fixing status?__\n"
    ]
   },
   {
@@ -228,13 +228,6 @@
     "        dplyr::select(-c(total_biomass, rgr, root_shoot_ratio, init_height)) %>%\n",
     "\n",
     "        mutate(across(where(is.numeric), scale))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PCA"
    ]
   },
   {
